--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -36,13 +36,33 @@ label=♬
 command=ncmpcpp --current-song
 interval=1
 
+[user]
+label=
+command=whoami
+interval=once
+
 [Kernel]
+color=#23f7ff
 label=
 command=uname -r
 interval=once
 
+[Firewall]
+color=#00cc00
+label=
+command=./scripts/i3blocks/ufw.sh
+separator=true
+interval=once
+
+#[bandwidth]
+#instance=wlp2s0
+#label=
+#interval=1
+
+
 [memory]
 label=
+color=#4bbad8
 command=free -h | grep Mem | awk '{print $3}'
 separator=true
 interval=5
@@ -53,12 +73,14 @@ interval=5
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
+color=#f1f900
 label=
 #instance=/mnt/data
 interval=30
 
 #Lixeira
 [lixeira]
+color=#ffc793
 label=
 command=du -hs ~/.local/share/Trash/files | awk '{print $1}'
 interval=30
@@ -67,6 +89,7 @@ separator=true
 
 #Cache de arquivos a serem excluidos
 [cache]
+color=#f9895c
 label=
 command=du -hs /var/cache/pacman/pkg/ | awk '{print $1}'
 interval=30
@@ -74,6 +97,7 @@ separator=true
 
 #Clima de maceió
 [clima]
+color=#e4b3ef
 label=
 command=./scripts/i3blocks/clima.sh
 interval=30
@@ -94,6 +118,7 @@ separator=true
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
+color=#25c6db
 label=
 instance=Master
 interval=1
@@ -111,12 +136,14 @@ interval=30
 # Date Time
 #
 [calendar]
+color=#ffe100
 label=
 command=date '+%d-%m-%Y'
 interval=30
 
 
 [hora]
+color=#18e072
 label=
 command=date '+%H:%M:%S'
 interval=1
